Fix spacing in nav

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ nav a.logo {
   text-decoration: none;
   transition: color 0.3s;
   padding: 0px 0px;
-  margin: 0px;
+  margin: 16px 0px;
   font-size: 40px; /* Adjusted font size for better proportion */
   font-weight: bold;
   color: #fff;
@@ -131,7 +131,6 @@ nav ul {
   display: flex;
   padding-inline-start: 0;
   box-sizing: border-box;
-  margin: 8px 0px;
 }
 
 nav ul li {
@@ -145,6 +144,7 @@ nav ul li a {
   transition: color 0.3s;
   padding: 10px 20px;
   display: block;
+  line-height: 1.5;
 }
 
 section {
